# bevy-cross-platform-template

./: .envrc  Cargo.toml  Makefile  README.md
.github/: FUNDING.yml
.github/workflows/: rust.yml
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/desktop/: Cargo.toml
crates/desktop/src/: main.rs
crates/mobile/: Cargo.toml  Makefile
crates/mobile/melodist.xcodeproj/: project.pbxproj
crates/mobile/melodist.xcodeproj/xcshareddata/xcschemes/: melodist.xcscheme
crates/mobile/src/: lib.rs
