[package]
name = "mobile"
version = "0.1.0"
edition = "2021"

[dependencies]
core = { path = "../core/", version = "0.1.0" }
bevy = { version = "0.14.1", features = [
	"bevy_core_pipeline",
	"bevy_render",
	"bevy_scene",
	"bevy_ui",
	"bevy_text",
	"bevy_asset",
] }

[lib]
name = "bilder"
crate-type = ["staticlib", "cdylib"]

[package.metadata.android]
package = "studio.bilder.mobile"
apk_name = "bilder"
assets = "../../assets"
resources = "../../assets/android-res"
# This strips debug symbols from the shared libraries, drastically reducing APK size. If you need them, remove the option.
strip = "strip"
build_targets = ["aarch64-linux-android", "armv7-linux-androideabi"]

[package.metadata.android.sdk]
target_sdk_version = 31

[package.metadata.android.application]
icon = "@mipmap/ic_launcher"
label = "bilder"
